[tool.poetry]
name = "dicom-anonymizer"
version = "0.1.0"
description = "Anonymization tool for DICOM using pydicom"
authors = ["Bene <holabenedict@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dicom_anonymizer"}]

[tool.poetry.dependencies]
python = "^3.11"
pydicom = "^2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
